# autodapp

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  docker-compose.yml
demo/discourse/: docker-compose.yml
demo/mediawiki/: LocalSettings.php  docker-compose.yml
scripts/: docker-tendermint-reset.sh
src/: main.rs
